title page ornament

--- a/frontend/assets/scss/main.scss
+++ b/frontend/assets/scss/main.scss
@@ -16,9 +16,5 @@ body {
       // color: $primary
     };
     background-color: $body-bg;
-    .container {
-        padding-top: 56px;
+    padding-top: 2%;
     }
- 
-
-}
